--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "author": "David Janes <davidjanes@davidjanes.com>", 
     "bin": {
-        "s3-cat.js": "./bin/s3-cat.js", 
-        "s3-ls.js": "./bin/s3-ls.js"
+        "dynamodb-get": "./bin/dynamodb-get.js", 
+        "s3-cat": "./bin/s3-cat.js", 
+        "s3-ls": "./bin/s3-ls.js"
     }, 
     "bugs": {
         "url": "https://github.com/dpjanes/iotdb-awslib/issues"
     }, 
     "dependencies": {
-        "aws-sdk": "~2.74.0", 
+        "aws-sdk": "~2.78.0", 
         "bluebird-q": "~2.1.1", 
         "iotdb-errors": "~3.0.5", 
         "iotdb-helpers": "~3.0.32"
@@ -35,5 +36,5 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     }, 
-    "version": "1.0.25"
+    "version": "1.0.26"
 }
