--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
         "url": "https://github.com/dpjanes/iotdb-awslib/issues"
     }, 
     "dependencies": {
-        "async": "~2.6.1", 
-        "aws-sdk": "~2.799.0", 
-        "iotdb-errors": "~3.1.9", 
-        "iotdb-helpers": "~3.5.1", 
-        "mime": "~2.4.6"
+        "async": "~3.2.0", 
+        "aws-sdk": "~2.824.0", 
+        "iotdb-errors": "^3.1.9", 
+        "iotdb-helpers": "^3.5.4", 
+        "mime": "~2.4.7"
     }, 
     "description": "POP wrapper for AWS", 
     "license": "Apache-2.0", 
@@ -28,5 +28,5 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     }, 
-    "version": "2.0.3"
+    "version": "2.0.4"
 }
